--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       run: pacman -Syu --noconfirm git fontforge wget p7zip
     - uses: actions/checkout@v2
     - name: Download font
-      run: wget -O /tmp/ttc.7z https://github.com/be5invis/Sarasa-Gothic/releases/download/v${{ env.version }}/sarasa-gothic-ttc-${{ env.version }}.7z
+      run: wget -O /tmp/ttc.7z https://github.com/be5invis/Sarasa-Gothic/releases/download/v${{ env.version }}/sarasa-gothic-ttc-unhinted-${{ env.version }}.7z
     - name: Extract font
       run: 7z x -odata /tmp/ttc.7z
     - name: Run script
