--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,37 +10,61 @@ jobs:
     container: archlinux:latest
     steps:
     - name: Install dependencies
-      run: pacman -Syu --noconfirm git fontforge curl p7zip jq
+      run: pacman -Syu --noconfirm git fontforge curl p7zip jq python-pip && pip3 install --user afdko
     - uses: actions/checkout@v2
     - name: Grab latest version
       run: |
-        curl -L https://api.github.com/repos/be5invis/Sarasa-Gothic/releases/latest -o api.json
+        git clone https://github.com/GuiWonder/SourceHanToClassic.git
+        cd SourceHanToClassic
+        TOOL_VERSION=`git rev-parse --short HEAD`
+        cd ..
+        curl -L https://api.github.com/repos/Pal3love/Source-Han-TrueType/releases/latest -o api.json
         UPSTREAM_VERSION=$(cat api.json | jq -r .tag_name)
-        DOWNLOAD_URL=$(cat api.json | jq -r '.assets[] | select(.name | test("sarasa-gothic-ttc-(?!unhinted)")) | .browser_download_url')
         echo "UPSTREAM_VERSION=$UPSTREAM_VERSION" >> $GITHUB_ENV
-        echo "DOWNLOAD_URL=$DOWNLOAD_URL" >> $GITHUB_ENV
-    - name: Download font
-      run: curl -Lvo /tmp/ttc.7z $DOWNLOAD_URL
-    - name: Extract font
-      run: 7z x -odata /tmp/ttc.7z
+        echo "TOOL_VERSION=$TOOL_VERSION" >> $GITHUB_ENV
+    - name: Run Scripts
+      run: |
+        chmod +x 0*.sh *.py
+        ./01_download_fonts.sh
+        ./02_unzip_src.sh
+        ./03_split_ttc.sh
+        ./04_do.sh
+    - name: Compress font
+      run: |
+        cd out
+        7z a ../Advocate-Ancient.zip *
+    - name: Upload artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: Advocate Ancient
+        path: Advocate-Ancient.zip
+    - name: Copy font
+      run: | 
+        mkdir data
+        cp out/SourceHanSans-*.ttf data
+        ls data/
+        rm -rf out
     - name: Run script
       run: |
         mkdir out
+        cp -r data data1
         python3 extract.py
     - name: Compress font
       run: |
         cd out
-        7z a ../out.zip *
+        7z a ../YaHei.zip *
     - name: Upload artifact
       uses: actions/upload-artifact@v2
       with:
-        name: out
-        path: out
+        name: YaHei
+        path: YaHei.zip
     - name: Upload release
       uses: marvinpinto/action-automatic-releases@latest
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        automatic_release_tag: "upstream-${{ env.UPSTREAM_VERSION }}"
+        automatic_release_tag: "upstream-${{ env.UPSTREAM_VERSION }}-SourceHanToClassic-${{env.TOOL_VERSION}}"
         prerelease: true
         title: Nightly build
-        files: out.zip
+        files: |
+            YaHei.zip
+            Advocate-Ancient.zip
