--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,16 +21,20 @@ jobs:
     - uses: actions/checkout@v3
     - name: download_sans
       run: deno run --config ./deno.json --allow-all --v8-flags=--max-old-space-size=8192 download_sans.ts
-    - name: Run script
+    - name: prepare
       run: |
         mkdir out
-        echo "----------------------"
+    - name: yahei.js
+      run: |
         deno run --config ./deno.json --allow-all --v8-flags=--max-old-space-size=8192 yahei.js
-        echo "----------------------"
+        ls out/*
+    - name: simsun.ts
+      run: |
         deno run --config ./deno.json --allow-all --v8-flags=--max-old-space-size=8192 simsun.ts
-        echo "----------------------"
+        ls out/*
+    - name: droid-sans-mono.ts
+      run: |
         deno run --config ./deno.json --allow-all --v8-flags=--max-old-space-size=8192 droid-sans-mono.ts
-        echo "----------------------"
         ls out/*
     - name: Compress font
       run: |
